BlackBerry PlayBook doesn't sniff mime types https://bugs.webkit.org/show_bug.cgi?id=73869

Patch by Tyler Abbott <tabbott@rim.com> on 2012-03-09
Reviewed by Rob Buis.

Hook up MIMESniffing for BlackBerry. Override Content-Types will
not be overriden. File extensions will be trusted when content
is loaded from disk.

No tests, BlackBerry tests are not yet present in webkit.org codebase.

* PlatformBlackBerry.cmake:
* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::NetworkJob):
(WebCore::NetworkJob::initialize):
(WebCore::NetworkJob::handleNotifyDataReceived):
(WebCore::NetworkJob::sendResponseIfNeeded):
* platform/network/blackberry/NetworkJob.h:
(NetworkJob):

Canonical link: https://commits.webkit.org/97953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110361 268f45cc-cd09-0410-ab3c-d52691b4dbfc